--- a/EgitimPlatformuAI/Views/LevelScreen/LevelScreen.storyboard
+++ b/EgitimPlatformuAI/Views/LevelScreen/LevelScreen.storyboard
@@ -17,8 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your level on reading?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cq1-A7-DEn">
-                                <rect key="frame" x="42" y="79" width="309.33333333333331" height="27"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
+                                <rect key="frame" x="32" y="79" width="329" height="27"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
                                 <color key="textColor" name="paleGray"/>
                                 <nil key="highlightedColor"/>
                             </label>
